# rox

./: Cargo.toml  rustfmt.toml
src/: error.rs  interpreter.rs  main.rs  rox.rs  scanner.rs
src/ast/: expression.rs  mod.rs  statement.rs
src/ast/visitor/: ast_pretty_printer.rs  ast_printer.rs  mod.rs
src/expression/: ast_printer.rs  mod.rs
src/interpreter/: environment.rs  error.rs  mod.rs
src/parser/: error.rs  mod.rs
src/scanner/: error.rs  mod.rs
src/token/: mod.rs  token_type.rs
tests/: test_prompt.rs  test_read_file.rs
