[package]
name = "rox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
camino = "1.0"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
phf = { version = "0.10", features = ["macros"] }
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
assert_cmd = "2.0"
